@@ -1,5 +1,5 @@
 Package: MALDIquantForeign
-Version: 0.11.5
+Version: 0.11.6
 Date: 2018-08-14
 Title: Import/Export Routines for 'MALDIquant'
 Authors@R: c(person("Sebastian", "Gibb", role=c("aut", "cre"),
