@@ -17,13 +17,26 @@
 ## along with MALDIquantForeign. If not, see <http://www.gnu.org/licenses/>
 
 .importTab <- function(file, centroided=FALSE, massRange=c(0L, Inf),
-                       minIntensity=0L, skip=0L,
-                       sep=.autoSep(file, skip=skip),
-                       header=.autoHeader(file, sep=sep, skip=skip),
-                       verbose=FALSE, ...) {
+                       minIntensity=0L, skip=0L, sep=NULL, header=NULL,
+                       comment.char="#", encoding="unknown", verbose=FALSE,
+                       ...) {
+
+  text <- readLines(file, encoding=encoding)
+
+  text <- tail(text, length(text) - skip)
+
+  text <- text[!startsWith(trimws(text), comment.char)]
+
+  if (is.null(sep)) {
+    sep <- .autoSep(text)
+  }
+  if (is.null(header)) {
+    header <- .autoHeader(text, sep=sep)
+  }
+
   ## load ms file
-  s <- read.table(file=file, header=header, sep=sep, skip=skip,
-                  stringsAsFactors=FALSE, ...)
+  s <- read.table(text=text, header=header, sep=sep, skip=skip,
+                  comment.char=comment.char, stringsAsFactors=FALSE, ...)
 
   list(.createMassObject(mass=s[, 1L], intensity=s[, 2L],
                          metaData=list(file=file),
@@ -34,34 +47,31 @@
 }
 
 .importCsv <- function(file, centroided=FALSE, massRange=c(0L, Inf),
-                       minIntensity=0L, skip=0L,
-                       sep=.autoSep(file, skip=skip),
-                       header=.autoHeader(file, sep=sep, skip=skip),
+                       minIntensity=0L, skip=0L, sep=NULL, header=NULL,
+                       comment.char="#", encoding="unknown",
                        verbose=FALSE, ...) {
-
   .importTab(file=file, centroided=centroided, massRange=massRange,
              minIntensity=minIntensity, skip=skip, sep=sep,
-             header=header, verbose=verbose, ...)
+             header=header, comment.char=comment.char, encoding=encoding,
+             verbose=verbose, ...)
 }
 
-.autoHeader <- function(file, sep="\t", skip=0L) {
-  l <- tail(readLines(file, n=skip+1L), 1L)
-  l <- gsub(pattern='[\\\\"]*', replacement="", x=l)
+.autoHeader <- function(text, sep="\t") {
+  l <- gsub(pattern='[\\\\"]*', replacement="", x=text)
   l <- strsplit(l, split=sep)[[1L]][1L]
   !is.numeric(type.convert(l, as.is=TRUE))
 }
 
-.autoSep <- function(file, sep=c(",", ";", "\t", " "), skip=0L) {
-  l <- tail(readLines(file, n=skip+1L), 1L)
+.autoSep <- function(text, sep=c(",", ";", "\t", " ")) {
   pattern <- paste0(".+", sep, ".+")
   i <- vapply(pattern, function(x) {
-    g <- gregexpr(pattern=x, text=l)[[1L]]
+    g <- gregexpr(pattern=x, text=text)[[1L]]
     all(g > 0L) & length(g) == 1L
   }, logical(1L))
 
   if (any(i)) {
-    return(sep[which(i)[1L]])  ## return only first match
+    sep[which(i)[1L]]  ## return only first match
   } else {
-    return(sep[1L])
+    sep[1L]
   }
 }
